refactored YAMLConfigReader